# CythGFX

./: .gitignore  CMakeLists.txt  README.md  main.c
examples/: boids.cy  chip8.cy  falling_sand.cy  prospero.cy  rain.cy  raytracer.cy  snake.cy  sphere.cy  spline.cy
